plugins/screencast: take scaling into account for window sources

Otherwise the textures will be too small, and the result blurry

BUG: 497571